--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,35 @@
-Flask==2.0.1
-Werkzeug==2.2.2
-mysql-connector==2.2.9
+# Flask and core extensions
+Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.7
+Flask-CORS==5.0.0
+
+# Database
+SQLAlchemy==2.0.36
+mysqlclient==2.2.6
+alembic==1.14.0
+
+# Task Queue
+celery[redis]==5.4.0
+redis==5.2.1
+
+# Data validation and serialization
+pydantic==2.10.5
+pydantic-settings==2.7.1
+marshmallow==3.24.1
+
+# Data processing
+pandas==2.2.3
+
+# HTTP client
+requests==2.32.3
+tenacity==9.0.0
+
+# Configuration
+python-dotenv==1.0.1
+
+# Logging
+structlog==25.1.0
+
+# WSGI server
+gunicorn==23.0.0
