--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,25 @@
 services:
   db:
-    # We use a mariadb image which supports both amd64 & arm64 architecture
-    image: mariadb:10-focal
-    # If you really want to use MySQL, uncomment the following line
-    #image: mysql:8
-    command: '--default-authentication-plugin=mysql_native_password'
+    # We use a postgres image which supports both amd64 & arm64 architecture
+    image: postgres:16-alpine
+    command: postgres -c log_statement=all
     restart: always
     healthcheck:
-      test: ['CMD-SHELL', 'mysqladmin ping -h 127.0.0.1 --password="$$(cat /run/secrets/db-password)" --silent']
+      test: ['CMD-SHELL', 'pg_isready -U $$POSTGRES_USER']
       interval: 3s
       retries: 5
       start_period: 30s
     secrets:
       - db-password
     volumes:
-      - db-data:/var/lib/mysql
+      - db-data:/var/lib/postgresql/data
     networks:
       - backnet
     environment:
-      - MYSQL_DATABASE=example
-      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db-password
+      - POSTGRES_DB=example
+      - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
-      - 3306
-      - 33060
+      - 5432
 
   backend:
     build:
@@ -43,7 +40,7 @@ services:
       - SECRET_KEY=dev-secret-key-for-local-development
       - LOG_LEVEL=DEBUG
       - DB_HOST=db
-      - DB_PORT=3306
+      - DB_PORT=5432
       - DB_NAME=example
       - DB_USER=root
       - DB_PASSWORD_FILE=/run/secrets/db-password
