--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -5,6 +5,11 @@ on:
     branches: [main]
   schedule:
     - cron: "0 9 * * 1"
+
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   security:
     uses: eckslopez/platform-pipelines/.github/workflows/security-scan.yml@main
