--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,14 @@ jobs:
   test:
     name: Tests
     uses: zavestudios/platform-pipelines/.github/workflows/python-test.yml@main
+    with:
+      working_directory: backend
+      requirements_file: backend/requirements.txt
+      test_command: "pytest -q || [ $? -eq 5 ]"
+      use_database: false
+      use_redis: false
   lint:
     name: Lint
     uses: zavestudios/platform-pipelines/.github/workflows/python-lint.yml@main
+    with:
+      working_directory: backend
