--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     uses: zavestudios/platform-pipelines/.github/workflows/python-test.yml@main
     with:
       working_directory: backend
-      requirements_file: backend/requirements.txt
+      requirements_file: requirements.txt
       test_command: "pytest -q || [ $? -eq 5 ]"
       use_database: false
       use_redis: false
@@ -16,3 +16,5 @@ jobs:
     uses: zavestudios/platform-pipelines/.github/workflows/python-lint.yml@main
     with:
       working_directory: backend
+      run_ruff: false
+      run_black: false
